--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,38 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+.myCard {
+  background-color: white;
+  width: 300px;
+  height: 400px;
+  border: 1px;
+  margin: 50px auto;
+  border-radius: 15px;
+  position: relative;
+}
+body {
+  background-color: green;
+}
+.bottomright {
+  position: absolute;
+  right: 0px;
+  width: 10px;
+  bottom: 5px;
+  padding: 20px;
+}
+.topLeft {
+  position: absolute;
+  left: 0px;
+  width: 10px;
+  top: 5px;
+  padding: 20px;
+}
+.middle {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 60px;
+  margin-bottom: auto;
+  width: 40%;
+}
+h1 {
+  font-size: 200px;
+}
