--- a/src/style.css
+++ b/src/style.css
@@ -11,28 +11,29 @@
 body {
   background-color: green;
 }
-.bottomright {
-  position: absolute;
-  right: 0px;
-  width: 10px;
-  bottom: 5px;
-  padding: 20px;
-}
-.topLeft {
-  position: absolute;
-  left: 0px;
-  width: 10px;
-  top: 5px;
-  padding: 20px;
-}
 .middle {
-  display: block;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
-  margin-bottom: auto;
   width: 40%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 h1 {
   font-size: 200px;
+}
+img.one {
+  position: absolute;
+  height: 30%;
+  width: 35%;
+  padding: 20px;
+}
+img.two {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  height: 30%;
+  width: 35%;
+  padding: 20px;
 }
